@startuml

class TipoProducto{
    codigo: string
    nombre: string
    impuesto: numeric
}

class Proveedor{
    codigo: string
    nombre: string
}

class Producto{
    codigo: string
    tipo: TipoProducto
    stockDisponible: integer
    stockMinimo: integer
    precio: numeric
    proveedor: Proveedor
}

class RepositorioProducto{
    productos: List

    + constructor()
    + crear(producto)
    + editar(producto)
    + eliminar(producto)

    + presentar()
    + abastecer()

}

class CasoUsoProducto{
    repositorioProducto: RepositorioProducto

    + constructor(repositorioProducto)
    + crear(producto)
    + editar(producto)
    + eliminar(producto)

    + presentar()
    + abastecer()

}

Producto --> TipoProducto
Producto --> Proveedor

CasoUsoProducto "1" o-- "0..*" RepositorioProducto
RepositorioProducto --> Producto

@enduml
